2005-06-24  Matthias Baas <baas@ira.uka.de>

	* Modified the base joint class so that its possible to store 
	  arbitrary attributes (as is the case with regular Python classes).
	  This was suggested in "bug" 1121141.

2005-06-06  Matthias Baas <baas@ira.uka.de>

	* Creating a Body now requires a World object. Empty Bodies are not
	  allowed anymore. The ode.environment object now simply holds None
	  instead of an empty Body. It's now also possible to pass None to
	  the attach() method.
	* Added an iterator to iterate over the geoms inside a Space.

2005-05-05  Matthias Baas <baas@ira.uka.de>

	* src\joints.pyx (Joints): Added methods to set joint forces/torques directly (section 7.6
	  in the ODE manual).

2005-03-03  Matthias Baas <baas@ira.uka.de>

	* src\geomobject.pyx (setCollideBits, setCategoryBits): Bits can now also be passed as int.
	  Updated doc about collide and category bits (which are actually long instead of int).

2004-11-30  Timothy Stranex <timothy@stranex.com>

	* Modified setup to work with both Trimesh-enabled and Trimesh-disabled
	  builds of ODE without needing Pyrex to be installed.